--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "imagerecognitionapp",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "13.5.0"
+  },
   "dependencies": {
     "clarifai": "^2.9.1",
     "react": "^17.0.2",
@@ -9,6 +12,7 @@
     "react-scripts": "^4.0.3",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.42.4",
+    "serve": "^13.0.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
